chore: fix node version and ensure pnpm in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,12 +20,14 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
         with:
-          node-version: "22.18.0"
+          node-version: "20.19.5"
           cache: 'pnpm'
 
       - uses: pnpm/action-setup@v3
         with:
           version: 9
+      - name: Ensure pnpm is available
+        run: npm i -g pnpm@9
 
       - name: Install dependencies
         run: pnpm install
@@ -38,3 +40,4 @@ jobs:
 
       - name: Test
         run: pnpm test
+# Dummy commit to trigger CI
