--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -22,11 +22,13 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "22.18.0"
+          node-version: "20.19.5"
           cache: pnpm
       - uses: pnpm/action-setup@v3
         with:
           version: 9
+      - name: Ensure pnpm is available
+        run: npm i -g pnpm@9
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Install dependencies
