--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,11 +17,13 @@ jobs:
         with:
           fetch-depth: 2
 
-      - name: Setup Node.js environment
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "20.19.5"
+          node-version: "22.18.0"
           cache: 'pnpm'
+      - name: Enable Corepack
+        run: corepack enable
 
       - uses: pnpm/action-setup@v3
         with:
