--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -22,8 +22,10 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "20.19.5"
+          node-version: "22.18.0"
           cache: pnpm
+      - name: Enable Corepack
+        run: corepack enable
       - uses: pnpm/action-setup@v3
         with:
           version: 9
