fix: add pnpm setup to CI workflow

--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -20,6 +20,11 @@ jobs:
         with:
           node-version: '18'
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 8
+
       - name: Check version
         run: |
           node scripts/version-manager.js current
@@ -49,6 +54,11 @@ jobs:
         with:
           node-version: '18'
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 8
+
       - name: Configure Git
         run: |
           git config --local user.email "action@github.com"
@@ -73,6 +83,16 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 8
 
       - name: Get version
         id: version
