--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -19,15 +19,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Install pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 9
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "20.19.5"
-      - name: Enable Corepack
-        run: corepack enable
-      - uses: pnpm/action-setup@v3
-        with:
-          version: 9
+          node-version: "20"
+          cache: 'pnpm'
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Install dependencies
