fix: resolve pnpm lockfile and CI issues
- Create proper pnpm-lock.yaml with workspace dependencies
- Update all CI workflows to use --no-frozen-lockfile
- Fix version workflow path validation error
- Add changelog existence check before upload

--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '22'
           cache: 'pnpm'
 
       - name: Setup GitHub CLI
@@ -38,11 +38,22 @@ jobs:
         run: |
           node scripts/version-manager.js changelog > CHANGELOG.md
 
+      - name: Check if changelog exists
+        run: |
+          if [ -f CHANGELOG.md ]; then
+            echo "CHANGELOG.md exists"
+            cat CHANGELOG.md
+          else
+            echo "CHANGELOG.md not found"
+            exit 1
+          fi
+
       - name: Upload changelog
         uses: actions/upload-artifact@v4
         with:
           name: changelog
           path: CHANGELOG.md
+        if: hashFiles('CHANGELOG.md') != ''
 
   auto-version:
     needs: version-check
@@ -62,7 +73,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '22'
           cache: 'pnpm'
 
       - name: Setup GitHub CLI
@@ -102,7 +113,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '22'
           cache: 'pnpm'
 
       - name: Setup GitHub CLI
