--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "build": "hardhat compile",
-    "test": "hardhat test",
-    "lint": "eslint ."
+    "test": "hardhat test"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
