--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
 # Deployment (prefer GitHub OIDC with a deploy role; use static keys only if required)
-AWS_REGION=us-east-1
+AWS_REGION=us-east-2
 LAMBDA_FUNCTION_NAME=your-lambda-function-name
 AWS_ROLE_TO_ASSUME=arn:aws:iam::123456789012:role/github-oidc-deploy-role
+UPSTREAM_BASE=https://human-0.com
+CORS_ORIGINS=*
 
 # Optional: static credentials for local testing or legacy CI (do not commit real values)
 AWS_ACCESS_KEY_ID=your-access-key-id
