--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -43,14 +43,10 @@ jobs:
           # Place Docusaurus build under /documentation so GitHub Pages serves it at that path
           mkdir -p apps/web/dist/documentation
           cp -r apps/docs/build/* apps/web/dist/documentation/
-          # Copy source markdown files needed by API routes (all languages)
+          # Copy source markdown files needed by API routes (using our custom approach)
           mkdir -p apps/web/dist/docs
           cp apps/docs/privacy.md apps/web/dist/docs/
           cp apps/docs/terms.md apps/web/dist/docs/
-          # Copy Spanish versions for API routes
-          mkdir -p apps/web/dist/docs/i18n/es
-          cp apps/docs/i18n/es/docusaurus-plugin-content-docs/current/privacy.md apps/web/dist/docs/i18n/es/
-          cp apps/docs/i18n/es/docusaurus-plugin-content-docs/current/terms.md apps/web/dist/docs/i18n/es/
       - name: Copy public files
         run: |
           mkdir -p apps/web/dist/output
