fix(lambda): release v1.7.14
- Fixed lambda proxy configuration
- Version management enhancements
- Configuration updates
- Documentation updates

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 AWS_REGION=us-east-2
 LAMBDA_FUNCTION_NAME=your-lambda-function-name
 AWS_ROLE_TO_ASSUME=arn:aws:iam::123456789012:role/github-oidc-deploy-role
-UPSTREAM_BASE=https://human-0.com
+UPSTREAM_BASE=https://api.human0.me
 CORS_ORIGINS=*
 
 # Optional: static credentials for local testing or legacy CI (do not commit real values)
