--- a/packages/posh-sdk/package.json
+++ b/packages/posh-sdk/package.json
@@ -92,7 +92,10 @@
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "@vitest/coverage-v8": "^1.0.0",
+    "eslint": "^8.57.0",
     "ethers": "^6.0.0",
     "fast-check": "^3.15.0",
     "react": "^18.0.0",
