--- a/packages/posh-sdk/package.json
+++ b/packages/posh-sdk/package.json
@@ -2,6 +2,7 @@
   "name": "@human-0/posh-sdk",
   "version": "1.8.1",
   "description": "TypeScript SDK for Proof of Sustainable Humanity (PoSH) identity management",
+  "private": false,
   "keywords": [
     "posh",
     "identity",
