feat(ci): add automated publishing workflow for posh-sdk
- Added GitHub Actions workflow for npm publishing
- Created release.sh script for streamlined releases
- Added comprehensive PUBLISHING.md guide
- Updated VERSIONING.md with CI instructions
- Simplified package.json scripts
- Includes npm provenance for supply chain security
- Automatic GitHub release creation

--- a/packages/posh-sdk/package.json
+++ b/packages/posh-sdk/package.json
@@ -64,12 +64,9 @@
     "lint": "eslint src --ext .ts,.tsx",
     "clean": "rm -rf dist",
     "prepublishOnly": "npm run clean && npm run build && npm run test",
-    "version": "npm run build && git add -A",
-    "postversion": "git push && git push --tags",
-    "release:patch": "npm version patch -m 'chore: release v%s'",
-    "release:minor": "npm version minor -m 'chore: release v%s'",
-    "release:major": "npm version major -m 'chore: release v%s'",
-    "publish:npm": "npm publish --access public"
+    "release:patch": "./scripts/release.sh patch",
+    "release:minor": "./scripts/release.sh minor",
+    "release:major": "./scripts/release.sh major"
   },
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
